# ef5.ch

./: .gitignore  Generate.scala  ef5-ch.cabal  flake.nix  patch.diff  stack.yaml
.github/workflows/: deploy.yml
.nix/: builder.nix  flake.nix  iosevka.nix
content/: _.md
content/cv/: _.html  old.md
content/me/: _.md
src/: Bibtex.hs  Cv.hs  Katex.hs  Markdown.hs  Site.hs  ef5-ch.cabal  site.hs
static/css/: fonts.css  main.css  md.css
static/fonts/FiraCode/: FiraCode.css
static/fonts/FiraSans/: FiraSans.css
static/projects/warblre/poster/: external.css  index.html  style.css
template/: page.html
website/: about.md  cv.html  index.md  robots.txt
website/bibliographies/: main.bib
website/css/: default.css
website/js/: main.js
website/projects/: warblre.md
website/templates/: default.html
