name:               ef5-ch
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Site.hs
  other-modules:
    Katex
    Markdown
    Bibtex
    Cv
  hs-source-dirs:   src
  build-depends:
    ghc == 9.6.6
    ,  base == 4.*
    , hakyll == 4.16.*
    , time == 1.12.*
    , process == 1.6.*
    , text == 2.0.*
    , pandoc == 3.1.*
    , pandoc-types == 1.23.*
    , lucid2
    , clay
    , containers
    , mtl
    , titlecase
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    OverloadedStrings
